--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title> Samar Suppliers</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
+    <!-- <meta name="description" content=""> -->
   </head>
   <body>
     <div id="root"></div>
