--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="https://samarmart.s3.ap-south-1.amazonaws.com/logo/logo-only.svg" type="svg">
-    <title> Samar Suppliers</title>
+    <title> Samar Mart | Where Trust Meets Quality</title>
+    <meta name="description" content="Buy gadgets for you phone. Authentic gadgets with warranty.
+      Chargers, Earphones, Headphones, Powerbanks, Accessories all online. 
+    ">
+    <meta name="keywords" content="gadgets, accessories, samar mart, online store, buy gadgets online,
+    butwal online store, buy gadgets in butwal, powerbanks, chargers, earphones, screen protectors, c-cables, 
+    order online, order, butwal, electronics, electrical devices, coolers, fans, usb fans, ">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
     <!-- <meta name="description" content=""> -->
