updated meta titles and added checkout page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="https://samarmart.s3.ap-south-1.amazonaws.com/logo/logo-only.svg" type="svg">
-    <title> Samar Mart | Where Trust Meets Quality</title>
-    <meta name="description" content="Buy gadgets for you phone. Authentic gadgets with warranty.
-      Chargers, Earphones, Headphones, Powerbanks, Accessories all online. 
+    <title> Samar Mart | Where Trust Meets Quality | Authentic Gadgets at your fingertips</title>
+    <meta name="description" content="Explore a wide range of authentic gadgets and tech products at Samar Mart. Shop from the comfort of your home and experience
+    the convenience of online shopping. Get the latest gadgets delivered to your doorstep with secure and reliable shiping. Browse now! 
     ">
     <meta name="keywords" content="gadgets, accessories, samar mart, online store, buy gadgets online,
     butwal online store, buy gadgets in butwal, powerbanks, chargers, earphones, screen protectors, c-cables, 
